mobile view changes: - fixed AOS for "about us" page - fixed cropped transformation images

--- a/src/App.css
+++ b/src/App.css
@@ -516,7 +516,6 @@ span {
   transition: transform 0.3s ease-in-out;
 }
 
-
 /* Responsive Design */
 @media (max-width: 1024px) {
   .slider img {
@@ -532,7 +531,7 @@ span {
 
 @media (max-width: 768px) {
   .slider img {
-    width: 250px;
+    width: 900px;
     height: 400px;
   }
 
